--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "cors": "2.8.5",
+    "firebase": "^8.1.1",
     "next": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
